--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native": "0.72.3",
     "react-native-elements": "^3.4.3",
     "react-native-image-zoom-viewer": "^3.0.1",
-    "react-native-maps": "^1.7.1"
+    "react-native-maps": "^1.7.1",
+    "expo-secure-store": "~12.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
